<resources>
    <string name="app_name">Schedule</string>
    <!-- MainActivity -->
    <string name="add_group">Add</string>
    <string name="delete_group">Delete group</string>
    <string name="spaces_switcher">Spaces</string>
    <string-array name="week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="week_short">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>
    <!-- Tips -->
    <string name="tip_add_group_title">Favourite groups</string>
    <string name="tip_add_group_summary">Now you can switch between favourite groups easily</string>
    <string name="tip_edit_title">Tap to edit</string>
    <string name="tip_edit_summary">You can edit any subject, just click on it!</string>
    <string name="tip_add_subject_title">Add new subject</string>
    <string name="tip_add_subject_summary">Tap to add new subject</string>
    <string name="tip_settings_title">Settings</string>
    <string name="tip_settings_summary">Open to set up theme and notifications</string>
    <!-- Start Activity -->
    <string name="edit_text_hint">Enter your group number</string>
    <string name="button_start">Start</string>
    <string name="search_hint">Search for a group</string>

    <string name="create_dialog_title">Create new group</string>
    <string name="create_dialog_positive">Create</string>
    <string name="create_dialog_negative">Cancel</string>
    <string name="create_dialog_hint">Enter group name</string>
    <string name="create_dialog_error">Group name must be not empty</string>
    <!-- EditActivity -->
    <string name="title_new">New lesson</string>
    <string name="title_edit">Edit lesson</string>
    <string name="name_hint">Lesson</string>
    <string name="place_hint">Place</string>
    <string name="prof_hint">Professor</string>
    <string name="start_time_hint">Start time</string>
    <string name="end_time_hint">End time</string>
    <string name="notes_hint">Notes</string>
    <string name="type_hint">Lesson type</string>
    <string name="day_hint">Day of the week</string>
    <string name="default_start_time" translatable="false">9:00</string>
    <string name="default_end_time" translatable="false">10:25</string>
    <string name="error_empty_string">Text must be not empty</string>
    <string name="error_time">Incorrect time</string>
    <string name="error_hint">Cannot be saved</string>
    <string name="empty_string" translatable="false" />
    <string-array name="lesson_types_text">
        <item>Seminar</item>
        <item>Lecture</item>
        <item>Laboratory</item>
        <item>Rest</item>
        <item>Botay</item>
    </string-array>
    <!-- Confirm dialog -->
    <string name="dialog_title">Confirmation</string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="reset_message">"Are you sure that you want to reset? "</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <!-- TimePicker -->
    <!-- Widget -->
    <string name="next_button" translatable="false">Next</string>
    <string name="prev_button" translatable="false">Previous</string>
    <string name="image" translatable="false">Image</string>


    <!-- Settings Activity -->

    <string name="title_activity_settings">Settings</string>

    <!-- Appearance Preferences -->

    <string name="pref_header_appearance">Appearance</string>

    <string name="pref_theme_title">Choose theme</string>

    <string-array name="pref_theme_list_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Default</item>
    </string-array>

    <string-array name="pref_theme_list_values">
        <item>light</item>
        <item>dark</item>
        <item>default</item>
    </string-array>

    <string name="pref_stars_title">Night sky</string>
    <string name="pref_stars_summary">Animated night sky is available in the Dark theme</string>

    <string name="pref_spaces_title">Spaces</string>
    <string name="pref_spaces_summary">Show spaces between lessons</string>

    <!-- Schedule Preferences -->
    <string name="pref_header_data_sync">Schedule</string>

    <string name="pref_reset_title">Reset schedule</string>
    <string name="pref_reset_summary">Delete all changes you\'ve made</string>

    <!-- Notification Preferences -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_lesson_notification_title">Lesson notifications</string>
    <string name="pref_lesson_notification_summary">"App will notify you before each lesson "</string>

    <string name="pref_notification_before_title">Notify about the lesson in</string>
    <string-array name="pref_notification_before_list_titles">
        <item>1 minute</item>
        <item>2 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="pref_notification_before_list_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="pref_group_title">Group for notifications</string>

    <string name="pref_title_ringtone">Sound</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_system_notification_title">System settings</string>

    <!-- Communication Preferences -->

    <string name="pref_header_communication">Communication</string>
    <string name="pref_share_app_title">Share this app</string>
    <string name="pref_share_message">Try MIPT schedule app</string>
    <string name="pref_write_developer_title">Write to developer</string>
    <string name="pref_write_developer_url" translatable="false">https://vk.com/yasha_kayumov</string>

    <string name="pref_rate_app_title">Rate this app</string>
    <string name="pref_rate_app_url" translatable="false">https://play.google.com/store/apps/details?id=edu.phystech.iag.kaiumov.schedule</string>

    <!-- Notifications -->

    <string name="notification_title" translatable="false">%s (%s)</string>
    <plurals name="notification_text_time">
        <item quantity="one">in %d minutes </item>
        <item quantity="other">in %d minutes </item>
    </plurals>

    <string name="notification_text_place">\u0020in %s</string>
    <string name="notification_time_is_up">The lesson has already begun</string>
    
    <!-- Schedule item -->
    <string name="break_extra_short">Break is just %d minutes :(</string>
    <string name="break_short">%d minute break - a cup of tea?</string>
    <string name="break_medium">%d minutes are enough to eat</string>
    <string name="break_long">%d-minute break. Finally, some good sleep!</string>

</resources>
