<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/widget_bar_background">

        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/prev_button"
            android:src="@drawable/ic_prev" />

        <TextView
            android:id="@+id/widgetTextBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/nextButton"
            android:layout_toEndOf="@id/prevButton"
            android:clickable="false"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/next_button"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <ListView
        android:id="@+id/widgetListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/widget_margin"
        android:layout_marginTop="@dimen/widget_margin"
        android:layout_marginBottom="@dimen/widget_margin"
        android:divider="@android:color/transparent"
        android:dividerHeight="1dp" />
</LinearLayout>